syntax = "proto3";

package growing.graphql.gateway;

import "google/protobuf/empty.proto";

option java_package = "io.growing.gateway";
option java_multiple_files = true;
option java_outer_classname = "SchemeProto";

message SchemeDto {

  string name = 1;
  repeated bytes graphql_definitions = 2;
  repeated bytes restful_definitions = 3;

}

service SchemeService {

  rpc GetScheme(google.protobuf.Empty) returns(SchemeDto){
  }

}
